--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,14 +142,15 @@ h6 {
   left: 14px;
   top: calc(100% + 30px);
   margin: 0;
-  padding: 10px 0;
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  background: #fff;
+  background: rgb(188, 195, 179);
+  opacity: .3;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
   border-radius: 4px;
+  padding: 15%;
 }
 
 .navbar .dropdown ul li {
@@ -608,12 +609,6 @@ section {
 
 .about .content .count-box a:hover {
   color: #82909c;
-}
-
-.about .image {
-  background: url("../img/me.jpg") center center no-repeat;
-  background-size: cover;
-  min-height: 500px;
 }
 
 .about .skills-content {
