--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1302,7 +1302,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/aerial.jpg") top center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
