--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -775,7 +775,7 @@ section {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("../img/testimonials-bg.jpg") no-repeat;
+  background: url("../img/open-networking-banner.jpg") no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
